agregado de maps

--- a/index.html
+++ b/index.html
@@ -122,8 +122,7 @@
 
                         </div>
                     </div>
-                    <br>
-                    <br>
+
                     <h2 id="titulo_noticias">Últimas noticias</h2>
                     <div class="carrusel_noticia" id="carrusel_noticia">
                         <div class="noticia popup" data-titulo="Jornada de software 2025" data-texto="El 15 de Septiembre nos vemos en el sum de Roldan.
@@ -194,6 +193,8 @@
                             Vidaurreta y Berni, Roldán, Santa Fe
                         </a>
                     </p>
+                    <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1447.4001499789756!2d-60.91001364422348!3d-32.898503448964355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b6499abd513111%3A0x24fd58ccd935f5fb!2sInstituto%20Superior%20N%C2%B0%204038%20Juan%20Pablo%20II!5e0!3m2!1ses!2sar!4v1756766818397!5m2!1ses!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </p>    
                 </div>
 
                 <div class="form-box">
