--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
 
     <footer>
         <div>
-            <h2>Equipo programación II y PP II</h2>
-            <p class="footer-nombres">Lucas Paladini &bull; Emanuel Monella &bull; Ignacio Fleita &bull; Edgardo Soto &bull; Victoria Juarez &bull; Rodrigo Bravo &bull; Milagros Gonzalez</p>
+            <h2>Equipo programación II y Practica Profesionalizante II</h2>
+            <p class="footer-nombres">Lucas Paladini &bull; Emanuel Monella &bull; Nacho Fleita &bull; Edgardo Soto &bull; Victoria Juarez &bull; Rodrigo Bravo &bull; Milagros Gonzalez</p>
             <p class="footer-copyright">&copy; ISPI 4038 Juan Pablo II. Todos los derechos reservados.</p>
         </div>
     </footer>
