movimiento de botoncitos y altura para el coso

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <h1>Información del instituto</h1>
                 <div class="profile-picture">
                     <div class="bloque">
-                        <img src="img/info_1.PNG" alt="Imagen 1">
+                        <img src="img/info_1.PNG" alt="Imagen 1" id="img1">
                         <h2>Información institucional</h2>
                         <p>El instituto cuenta con docentes altamente capacitados,<br>
                             sobre todo en el área de programación.</p>
@@ -85,7 +85,7 @@
                     </div>
 
                     <div class="bloque">
-                        <img src="img/info_2.PNG" alt="Imagen 2">
+                        <img src="img/info_2.PNG" alt="Imagen 2" id="img2">
                         <h2>Oferta académica</h2>
                         <p>Capacitación en lenguajes de programación<br>
                             con alta salida laboral</p>
